force-app/main/default/objects/Org_Unit__c/Org_Unit__c.object-meta.xml
<CustomObject>
    <label>Org Unit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Org Unit Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>