force-app/main/default/objects/Org_Unit__c/fields/Available_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Available_Profiles__c</fullName>
    <description>The available profiles for this cost center, based on the users that are in this cost center.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The available profiles for this cost center, based on the users that are in this cost center.</inlineHelpText>
    <label>Available Profiles</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>