force-app/main/default/objects/Org_Unit__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this is a sales org, the cost center number of the org.</inlineHelpText>
    <label>Cost Center</label>
    <length>8</length>
    <type>Text</type>
</CustomField>