force-app/main/default/objects/Org_Unit__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Manager to use if the Manager is a Salesforce user.</inlineHelpText>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Org_Units1</relationshipName>
    <type>Lookup</type>
</CustomField>