force-app/main/default/objects/Org_Unit__c/fields/MgrEmail__c.field-meta.xml
<CustomField>
    <fullName>MgrEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Email of the Manager if a User record is not available.</inlineHelpText>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>