force-app/main/default/objects/Org_Unit__c/fields/Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Type__c</fullName>
    <description>The type of Org Unit this is.</description>
    <inlineHelpText>The type of Org Unit this is.</inlineHelpText>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cost Center</fullName>
                <default>true</default>
                <label>Cost Center</label>
            </value>
            <value>
                <fullName>Sales Office</fullName>
            </value>
            <value>
                <fullName>District</fullName>
            </value>
            <value>
                <fullName>Zone</fullName>
            </value>
            <value>
                <fullName>Area</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>