force-app/main/default/objects/Org_Unit__c/fields/Org_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Unit_Name__c</fullName>
    <description>The name of this org unit</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of this org unit</inlineHelpText>
    <label>Org Unit Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>