force-app/main/default/objects/Org_Unit__c/fields/OverrideAssistant__c.field-meta.xml
<CustomField>
    <fullName>OverrideAssistant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To always use this assistant name/email instead of trying to find the assistant in the Org Unit User Links</inlineHelpText>
    <label>Override Assistant</label>
    <type>Checkbox</type>
</CustomField>