force-app/main/default/objects/Org_Unit__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>