force-app/main/default/objects/Org_Unit__c/fields/RepUserRoleId__c.field-meta.xml
<CustomField>
    <fullName>RepUserRoleId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>If this is a district, the userrole id for the salesrep.</inlineHelpText>
    <label>Rep UserRoleId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>