force-app/main/default/objects/Org_Unit__c/fields/UserRoleId__c.field-meta.xml
<CustomField>
    <fullName>UserRoleId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The Id of the role associated with this org unit</inlineHelpText>
    <label>UserRoleId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>