force-app/main/default/objects/Org_Unit__c/fields/UserRoleName__c.field-meta.xml
<CustomField>
    <fullName>UserRoleName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the UserRole associated with this org unit</inlineHelpText>
    <label>UserRole Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>