force-app/main/default/objects/Org_Unit__c/validationRules/Sales_Office_No_Role_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Office_No_Role_Fields</fullName>
    <active>true</active>
    <description>Don&apos;t fill in any of the role fields for sales office org units</description>
    <errorConditionFormula>AND(ISPICKVAL(Org_Type__c,&apos;Sales Office&apos;),
OR(NOT(ISBLANK(UserRoleName__c)),NOT(ISBLANK(RepUserRoleName__c)),NOT(ISBLANK(UserRoleId__c)),NOT(ISBLANK(RepUserRoleId__c))))</errorConditionFormula>
    <errorMessage>Don&apos;t fill in any of the role fields for sales office org units</errorMessage>
</ValidationRule>