force-app/main/default/objects/Org_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Org_Unit_Number_Padded__c</columns>
    <columns>Org_Unit_Name__c</columns>
    <columns>Org_Type__c</columns>
    <columns>Available_Profiles__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>Cost_Center__c</columns>
    <columns>UserRoleId__c</columns>
    <columns>UserRoleName__c</columns>
    <columns>Parent__c</columns>
    <columns>Manager__c</columns>
    <columns>MgrName__c</columns>
    <columns>Assistant__c</columns>
    <columns>OverrideAssistant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>