force-app/main/default/objects/Org_Unit__c/listViews/Area_no_role.listView-meta.xml
<ListView>
    <fullName>Area_no_role</fullName>
    <columns>NAME</columns>
    <columns>Org_Unit_Name__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>NbrUsers__c</columns>
    <columns>Parent__c</columns>
    <columns>Query_Key__c</columns>
    <columns>DoNotEvaluateRoles__c</columns>
    <columns>CheckAssistantOnReps__c</columns>
    <columns>UserRoleId__c</columns>
    <columns>UserRoleName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserRoleId__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Org_Type__c</field>
        <operation>equals</operation>
        <value>Area</value>
    </filters>
    <label>Area no role</label>
</ListView>