force-app/main/default/objects/Org_Unit__c/listViews/BusDev.listView-meta.xml
<ListView>
    <fullName>BusDev</fullName>
    <columns>NAME</columns>
    <columns>Org_Unit_Name__c</columns>
    <columns>Org_Type__c</columns>
    <columns>Parent__c</columns>
    <columns>Cost_Center__c</columns>
    <columns>Org_Unit_Number_Padded__c</columns>
    <columns>RepUserRoleId__c</columns>
    <columns>RepUserRoleName__c</columns>
    <columns>UserRoleId__c</columns>
    <columns>UserRoleName__c</columns>
    <columns>NbrUsers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>BusDev</value>
    </filters>
    <label>BusDev</label>
</ListView>