force-app/main/default/objects/Org_Unit__c/listViews/Cost_Centers_MMS.listView-meta.xml
<ListView>
    <fullName>Cost_Centers_MMS</fullName>
    <columns>NAME</columns>
    <columns>Org_Unit_Number_Padded__c</columns>
    <columns>Org_Unit_Name__c</columns>
    <columns>Org_Type__c</columns>
    <columns>Available_Profiles__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Org_Type__c</field>
        <operation>equals</operation>
        <value>Cost Center</value>
    </filters>
    <label>Cost Centers - MMS</label>
</ListView>