force-app/main/default/objects/Org_Unit__c/listViews/Districts_no_Role.listView-meta.xml
<ListView>
    <fullName>Districts_no_Role</fullName>
    <columns>NAME</columns>
    <columns>Org_Unit_Name__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>NbrUsers__c</columns>
    <columns>Parent__c</columns>
    <columns>Cost_Center__c</columns>
    <columns>Query_Key__c</columns>
    <columns>Org_Unit_Number_Padded__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserRoleId__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Org_Type__c</field>
        <operation>equals</operation>
        <value>District</value>
    </filters>
    <label>Districts no Role</label>
</ListView>