force-app/main/default/objects/Org_Unit__c/listViews/HRS_Districts.listView-meta.xml
<ListView>
    <fullName>HRS_Districts</fullName>
    <columns>NAME</columns>
    <columns>Org_Unit_Name__c</columns>
    <columns>Parent__c</columns>
    <columns>Query_Key__c</columns>
    <columns>NbrUsers__c</columns>
    <columns>UserRoleName__c</columns>
    <columns>RepUserRoleName__c</columns>
    <columns>Org_Unit_Number_Padded__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>HRS</value>
    </filters>
    <filters>
        <field>Org_Type__c</field>
        <operation>equals</operation>
        <value>District</value>
    </filters>
    <label>HRS Districts</label>
</ListView>