force-app/main/default/objects/Org_Unit__c/listViews/HRS_Org_Units.listView-meta.xml
<ListView>
    <fullName>HRS_Org_Units</fullName>
    <columns>NAME</columns>
    <columns>Org_Unit_Name__c</columns>
    <columns>Org_Type__c</columns>
    <columns>Parent__c</columns>
    <columns>Cost_Center__c</columns>
    <columns>Query_Key__c</columns>
    <columns>Org_Unit_Number_Padded__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>HRS</value>
    </filters>
    <label>HRS Org Units</label>
</ListView>