force-app/main/default/objects/Org_Unit__c/listViews/MMS_Org_Units.listView-meta.xml
<ListView>
    <fullName>MMS_Org_Units</fullName>
    <columns>NAME</columns>
    <columns>Org_Unit_Name__c</columns>
    <columns>Org_Type__c</columns>
    <columns>Parent__c</columns>
    <columns>Cost_Center__c</columns>
    <columns>Query_Key__c</columns>
    <columns>Org_Unit_Number_Padded__c</columns>
    <columns>RepUserRoleId__c</columns>
    <columns>RepUserRoleName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>MMS</value>
    </filters>
    <label>MMS Org Units</label>
</ListView>